--- a/GlobalAds/GlobalAds/res/layout/activity_actions_list.xml
+++ b/GlobalAds/GlobalAds/res/layout/activity_actions_list.xml
@@ -18,7 +18,7 @@
 	    android:layout_centerHorizontal="true"
 	    android:background="@drawable/activity_actions_list_buttons_layout"
 	    android:paddingLeft="20dp"
-	    android:paddingRight="20dp" >
+	    android:paddingRight="20dp" android:weightSum="5" android:gravity="center">
 		
 		<Button
 		    android:id="@+id/activity_actions_list_button_account"
